jwt backend done

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 CONNECTION_URL = "mongodb+srv://tanishq777:tanishq777@cluster0.lzgyb.mongodb.net/fullstackapp?retryWrites=true&w=majority"
 PORT = 5000
+SECRET = "cfg"
